hard-gists/7088662/run.log
=== Docker Run Log for 7088662 ===
Started at: Mi 29. Okt 16:58:51 CET 2025

[2025-10-29 16:58:52] START: Running container for 7088662
[2025-10-29 16:58:52] SUCCESS: Container 32681719b8cee77e743380790ac8a0f77a067e3bb41152acdf5187baecb0759e started for 7088662
=== Container logs for 7088662 ===
  File "/snippet.py", line 11
    print 'connect'
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7088662 ===
[2025-10-29 16:58:54] INFO: Container 32681719b8cee77e743380790ac8a0f77a067e3bb41152acdf5187baecb0759e has stopped
